--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "curl-request": "^1.1.1",
     "dateformat": "^3.0.3",
     "dotenv": "^8.2.0",
     "image-downloader": "^3.5.0",
